--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
       active:
          #- dev-postgresql  # comment @Lob on image.data
          - dev-h2          # un-comment @Lob on image.data
+         #- prod
    jpa:
       show-sql: false
    mail:
@@ -26,21 +27,6 @@ spring:
                writetimeout: 5000
 
 fm:
-   host:
-      address: ${HOST_ADDRESS:http://localhost:8080/}
-   schedule:
-      garbage-collection:
-         cron: 0 */5 * ? * *
-         #fixed-rate-string: PT60S
-   payment:
-      stripe:
-         key:
-            public: ${STRIPE_PUBLIC_KEY}
-            private: ${STRIPE_SECRET_KEY}
-            webhook: ${STRIPE_WEBHOOK_SECRET}
-         pi-minutes: 3
-         limit-of-naps: 3
-         ips: 0:0:0:0:0:0:0:1,127.0.0.1,3.18.12.63,3.130.192.231,13.235.14.237,13.235.122.149,35.154.171.200,52.15.183.38,54.187.174.169,54.187.205.235,54.187.216.72,54.241.31.99,54.241.31.102,54.241.34.107
    validation:
       numeric:
          profile-min-year: 1900
@@ -60,17 +46,6 @@ fm:
          year: ^[\d]{1,4}$
          price: ^[\d]{0,9}([.][\d]{1,2})*$ # dependency with PriceIntervals enum, so keep an eye on it
          phone: ^(\+)?(\([0-9]{0,4}\))?(([0-9\s.\-]){9,15})?$ # poor but enough approximation
-   security:
-      lock:
-         num-of-attempts: 2
-         locking-minutes: 5
-      token:
-         expiration-in-minutes: 3
-      random-password:
-         num-of-lower-case: 2
-         num-of-upper-case: 2
-         num-of-digit: 2
-         size: 10
    front-end:
       common-components:
          snackbar: Book added to your cart
@@ -118,7 +93,18 @@ fm:
          user: 2
          order: 2
       default-index: 0
-
+   payment:
+      stripe:
+         key:
+            public: ${STRIPE_PUBLIC_KEY}
+            private: ${STRIPE_SECRET_KEY}
+            webhook: ${STRIPE_WEBHOOK_SECRET}
+   security:
+      random-password:
+         num-of-lower-case: 2
+         num-of-upper-case: 2
+         num-of-digit: 2
+         size: 10
 ---
 
 spring:
@@ -126,22 +112,92 @@ spring:
    h2:
       console:
          enabled: true
+fm:
+   host:
+      address: http://localhost:8080/
+   schedule:
+      garbage-collection:
+         cron: 0 */5 * ? * *
+   payment:
+      stripe:
+         pi-minutes: 3
+         limit-of-naps: 3
+         ips: 0:0:0:0:0:0:0:1,127.0.0.1,3.18.12.63,3.130.192.231,13.235.14.237,13.235.122.149,35.154.171.200,52.15.183.38,54.187.174.169,54.187.205.235,54.187.216.72,54.241.31.99,54.241.31.102,54.241.34.107
+   security:
+      lock:
+         num-of-attempts: 2
+         locking-minutes: 5
+      token:
+         expiration-in-minutes: 3
 
 ---
 
 spring:
    profiles: dev-postgresql
    datasource:
-      url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/fm}
-      username: ${JDBC_DATABASE_USERNAME:postgres}
+      url: jdbc:postgresql://localhost:5432/fm
+      username: postgres
       password: ${JDBC_DATABASE_PASSWORD}
       driver-class-name: org.postgresql.Driver
       initialization-mode: always
-      #schema: classpath:sql/schema.sql
-      #data: classpath:sql/data*.sql
+      schema: classpath:sql/schema.sql
+      data: classpath:sql/data*.sql
    jpa:
       properties:
          hibernate:
             dialect : org.hibernate.dialect.PostgreSQLDialect
       hibernate:
          ddl-auto: none
+fm:
+   host:
+      address: http://localhost:8080/
+   schedule:
+      garbage-collection:
+         cron: 0 */5 * ? * *
+   payment:
+      stripe:
+         pi-minutes: 3
+         limit-of-naps: 3
+         ips: 0:0:0:0:0:0:0:1,127.0.0.1,3.18.12.63,3.130.192.231,13.235.14.237,13.235.122.149,35.154.171.200,52.15.183.38,54.187.174.169,54.187.205.235,54.187.216.72,54.241.31.99,54.241.31.102,54.241.34.107
+   security:
+      lock:
+         num-of-attempts: 2
+         locking-minutes: 5
+      token:
+         expiration-in-minutes: 3
+
+---
+
+spring:
+   profiles: prod
+   datasource:
+      url: ${JDBC_DATABASE_URL}
+      username: ${JDBC_DATABASE_USERNAME}
+      password: ${JDBC_DATABASE_PASSWORD}
+      driver-class-name: org.postgresql.Driver
+      initialization-mode: always
+      schema: classpath:sql/schema.sql
+      data: classpath:sql/data*.sql
+   jpa:
+      properties:
+         hibernate:
+            dialect: org.hibernate.dialect.PostgreSQLDialect
+      hibernate:
+         ddl-auto: none
+fm:
+   host:
+      address: ${HOST_ADDRESS}
+   schedule:
+      garbage-collection:
+         cron: 0 */45 * ? * *
+   payment:
+      stripe:
+         pi-minutes: 15
+         limit-of-naps: 3
+         ips: 3.18.12.63,3.130.192.231,13.235.14.237,13.235.122.149,35.154.171.200,52.15.183.38,54.187.174.169,54.187.205.235,54.187.216.72,54.241.31.99,54.241.31.102,54.241.34.107
+   security:
+      lock:
+         num-of-attempts: 5
+         locking-minutes: 60
+      token:
+         expiration-in-minutes: 60
