prepare from prod

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
    profiles:
       active:
          #- dev-postgresql  # comment @Lob on image.data
-         - dev-h2          # un-comment @Lob on image.data
-         #- prod
+         #- dev-h2          # UN-comment @Lob on image.data
+         - prod             # comment @Lob on image.data
    jpa:
       show-sql: false
    mail:
@@ -176,8 +176,8 @@ spring:
       password: ${JDBC_DATABASE_PASSWORD}
       driver-class-name: org.postgresql.Driver
       initialization-mode: always
-      schema: classpath:sql/schema.sql
-      data: classpath:sql/data*.sql
+      #schema: classpath:sql/schema.sql
+      #data: classpath:sql/data*.sql
    jpa:
       properties:
          hibernate:
