--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,12 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+        <!-- only for dev
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
