prepare for local dev h2

--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,11 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
-        <!-- only for dev
+        <!-- only for dev -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
-        -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
