--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
    profiles:
       active:
          #- dev-postgresql  # comment @Lob on image.data
-         #- dev-h2          # UN-comment @Lob on image.data
+         #- dev-h2          # UN-comment @Lob on image.data, and H2 pom dependency, and security config
          - prod             # comment @Lob on image.data
    jpa:
       show-sql: false
